<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpellDescriptionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/spellName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#FFFFFF"
            android:text="@string/spellNamePlaceholder"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/spellLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/levelPlaceholder"
            app:layout_constraintBaseline_toBaselineOf="@+id/spellName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/spellName" />

        <TextView
            android:id="@+id/castingTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/casting_time"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spellName" />

        <TextView
            android:id="@+id/componentsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/components"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/castingTimeLabel" />

        <TextView
            android:id="@+id/castingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/casting_time_placeholder"
            app:layout_constraintBaseline_toBaselineOf="@+id/castingTimeLabel"
            app:layout_constraintStart_toEndOf="@+id/castingTimeLabel" />

        <TextView
            android:id="@+id/components"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/componentsPlaceholder"
            app:layout_constraintBaseline_toBaselineOf="@+id/componentsLabel"
            app:layout_constraintStart_toEndOf="@+id/componentsLabel" />

        <TextView
            android:id="@+id/rangeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/range"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/componentsLabel" />

        <TextView
            android:id="@+id/durationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/duration"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rangeLabel" />

        <TextView
            android:id="@+id/effectLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/effect"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/durationLabel" />

        <TextView
            android:id="@+id/saveLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/saving_throw"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/effectLabel" />

        <TextView
            android:id="@+id/saveLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/resistance"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/saveLabel"
            app:layout_constraintStart_toEndOf="@+id/save" />

        <TextView
            android:id="@+id/range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/close"
            app:layout_constraintBaseline_toBaselineOf="@+id/rangeLabel"
            app:layout_constraintStart_toEndOf="@+id/rangeLabel" />

        <TextView
            android:id="@+id/effect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/ns_of_water_level"
            app:layout_constraintBaseline_toBaselineOf="@+id/effectLabel"
            app:layout_constraintStart_toEndOf="@+id/effectLabel" />

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/savePlaceholder"
            app:layout_constraintBaseline_toBaselineOf="@+id/saveLabel"
            app:layout_constraintStart_toEndOf="@+id/saveLabel" />

        <TextView
            android:id="@+id/resistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/resistancePlaceholder"
            app:layout_constraintBaseline_toBaselineOf="@+id/saveLabel2"
            app:layout_constraintStart_toEndOf="@+id/saveLabel2" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveLabel" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/durationLabel"
            app:layout_constraintStart_toEndOf="@+id/durationLabel"
            tools:text="@string/durationPlaceholder" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>